<resources>
    <string name="app_name">My Application</string>
    <string name="mobno">Mob. No.:</string>
    <string name="password">Password:</string>
    <string name="heading">Log In Page</string>
    <string name="checkbox">Tap to agree to our terms and conditions</string>
    <string name="submit">Submit</string>
    <string name="subheading">You have entered the following details</string>
    <string name="displayno">___________</string>
    <string name="displaypass">___________</string>
</resources>